change the colors of the views and correct the comments

--- a/Thesis_2020/src/main/java/VIEW/OrderCreateView.form
+++ b/Thesis_2020/src/main/java/VIEW/OrderCreateView.form
@@ -335,12 +335,12 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tempus Sans ITC" size="48" style="1"/>
+          <Font name="Tahoma" size="48" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="33" red="33" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Create an order..."/>
+        <Property name="text" type="java.lang.String" value="                &#x39c;ake &#x391;n &#x39f;rder"/>
       </Properties>
     </Component>
   </SubComponents>
